agrega dinamismo al mostrar cards de productos

--- a/index.html
+++ b/index.html
@@ -15,60 +15,13 @@
     <section class="contenedor">
         <!-- Contenedor de elementos -->
         <div class="contenedor-items">
-            <div class="item">
-                <span class="titulo-item">zapatillas new balance </span>
-                <img src="img/zapatillas1.jpg" alt="" class="img-item">
-                <span class="precio-item">$150.000</span>
-                <button class="boton-item">Agregar al Carrito</button>
-            </div>
-            <div class="item">
+            <!-- Ejemplo del item construido. -->
+            <!-- <div class="item">
                 <span class="titulo-item">NIKE JORDAN BROWN</span>
                 <img src="img/zapatillas2.jpg" alt="" class="img-item">
                 <span class="precio-item">$250.000</span>
                 <button class="boton-item">Agregar al Carrito</button>
-            </div>
-            <div class="item">
-                <span class="titulo-item">ADIDAS KENY</span>
-                <img src="img/zapatillas3.jpg" alt="" class="img-item">
-                <span class="precio-item">$250.000</span>
-                <button class="boton-item">Agregar al Carrito</button>
-            </div>
-            <div class="item">
-                <span class="titulo-item">CONVERSE NIGHT</span>
-                <img src="img/zapatillas4.jpg" alt="" class="img-item">
-                <span class="precio-item">$180.000</span>
-                <button class="boton-item">Agregar al Carrito</button>
-            </div>
-            <div class="item">
-                <span class="titulo-item">NIKE AIR All</span>
-                <img src="img/zapatillas5.jpg" alt="" class="img-item">
-                <span class="precio-item">$320.000</span>
-                <button class="boton-item">Agregar al Carrito</button>
-            </div>
-            <div class="item">
-                <span class="titulo-item">ADIDAS SUPER STAR</span>
-                <img src="img/zapatillas6.jpg" alt="" class="img-item">
-                <span class="precio-item">$180.000</span>
-                <button class="boton-item">Agregar al Carrito</button>
-            </div>
-            <div class="item">
-                <span class="titulo-item">ADIDAS ULTRA</span>
-                <img src="img/zapatillas7.jpg" alt="" class="img-item">
-                <span class="precio-item">$154.000</span>
-                <button class="boton-item">Agregar al Carrito</button>
-            </div>
-            <div class="item">
-                <span class="titulo-item">ADIDAS WHITE</span>
-                <img src="img/zapatillas9.jpg" alt="" class="img-item">
-                <span class="precio-item">$132.000</span>
-                <button class="boton-item">Agregar al Carrito</button>
-            </div>
-            <div class="item">
-                <span class="titulo-item">ADIDAS GASELLE</span>
-                <img src="img/ZAPATILLAS8.jpg" alt="" class="img-item">
-                <span class="precio-item">$142.800</span>
-                <button class="boton-item">Agregar al Carrito</button>
-            </div>
+            </div> -->
         </div>
         <!-- Carrito de Compras -->
         <div class="carrito" id="carrito">
@@ -85,10 +38,11 @@
                     <span class="carrito-precio-total"></span>
                 </div>
                 <button class="btn-pagar">Pagar <i class="fa-solid fa-bag-shopping"></i> </button>
+                <button class="btn-vaciar-carrito">Vaciar Carrito <i class="fa-solid fa-trash"></i> </button>
             </div>
         </div>
     </section>
-    <script src="app.js" async></script>
+    <script  src="index.js" async></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
