--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
             </div>
         </div>
     </section>
-    <script  src="index.js" async></script>
+    <script src="index.js" async type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="db.js" type="module"></script>
 </body>
 </html>
