--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <title>House of Sneakers</title> 
 </head>
 <body>
-    <header>
+    <header class="navbar">
         <h1> House of Sneakers</h1>
+        <img src="./img/logo-sneakers.webp" width="40" height="40" style="border-radius: 20px;">
     </header>
+    <div class="separator"></div>
     <section class="contenedor">
         <!-- Contenedor de elementos -->
         <div class="contenedor-items">
@@ -50,7 +52,7 @@
             </figure>
           </template>
     </section>
-    <section class="sneakers" id="sneakers"></section>
+    <!-- <section class="sneakers" id="sneakers"></section> -->
     <script src="index.js" async type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="db.js" type="module"></script>
