--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
         <img src="./img/logo-sneakers.webp" width="40" height="40" style="border-radius: 20px;">
     </header>
     <div class="separator"></div>
+
+    <div class="slider">
+        <div class="slider--inner">
+            <img class='promo-img' src="./img/promo1.jpg" alt="imagen-promocional">
+            <img class='promo-img' src="./img/promo2.jpg" alt="imagen-promocional">
+            <img class='promo-img' src="./img/promo4.png" alt="imagen-promocional">
+        </div>
+    </div>
+
     <section class="contenedor">
         <!-- Contenedor de elementos -->
         <div class="contenedor-items">
