--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
 
     <div class="slider">
         <div class="slider--inner">
-            <img class='promo-img' src="./img/promo1.jpg" alt="imagen-promocional">
-            <img class='promo-img' src="./img/promo2.jpg" alt="imagen-promocional">
-            <img class='promo-img' src="./img/promo4.png" alt="imagen-promocional">
+            <img class='promo-img' src="./img/promo8.jpeg" alt="imagen-promocional">
+            <img class='promo-img' src="./img/promo4.jpeg" alt="imagen-promocional">
+            <img class='promo-img' src="./img/promo3.jpeg" alt="imagen-promocional">
+            <img class='promo-img' src="./img/promo2.jpeg" alt="imagen-promocional">
         </div>
     </div>
 
