--- a/index.html
+++ b/index.html
@@ -54,8 +54,15 @@
             </div>
         </div>
     </section>
+    <footer class="footer">
+        <div class="footer-content">
+            <img src="./img/logo-sneakers.webp" width="40" height="40" style="border-radius: 20px;" alt="Logo">
+            <p>&copy; 2024 House of Sneakers</p>
+        </div>
+    </footer>
     <script src="index.js" async type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="db.js" type="module"></script>
+    
 </body>
 </html>
